Fixed root overflow

--- a/styles.css
+++ b/styles.css
@@ -34,6 +34,7 @@ h1 {
     text-align: center;
     box-shadow: 1px 1px 5px 1px #1b37b4;
     border-radius: 10px;
+    overflow-y: auto;
 }
 
 .input-fields {
